Вносит поправки в scss

--- a/index.html
+++ b/index.html
@@ -119,11 +119,10 @@
                 name="comment"
                 rows="150"
                 cols="80"
-                class="form-item comment"
+                class="form-item-comment"
               >
               </textarea>
-
-              <label class="form-label comment">Комментарий </label>
+              <label class="form-label-comment">Комментарий </label>
             </div>
             <div class="checkbox">
               <input type="checkbox" id="checkbox-modal" />
@@ -226,7 +225,7 @@
 
       <!--TEAM-->
 
-      <section class="ourteam section">
+      <section class="section-ourteam">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team">
